--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -1,1 +1,235 @@
-body {border: 1px; background: black;}
+$enable-flex:               true;
+$enable-grid-classes:       true;
+
+$bootstrap-path: './../../../node_modules/bootstrap';
+
+@import './../../../node_modules/bootstrap/scss/_variables.scss';
+@import './../../../node_modules/bootstrap/scss/_mixins.scss';
+@import './../../../node_modules/bootstrap/scss/_normalize.scss';
+@import './../../../node_modules/bootstrap/scss/_reboot.scss';
+@import './../../../node_modules/bootstrap/scss/_grid.scss';
+
+// Variables
+// Fonts
+$font-family-base: "DinPro", "PT Sans", "Helvetica Neue", Arial, sans-serif !important;
+
+// Colors
+$color-primary: #ec3737;
+$color-secondary: #f5de0f;
+$color-nav-main-background: #fff;
+$color-text: #000;
+$color-light-grey: #f4f4f4;
+$color-dark-grey: #3e3e3e;
+
+
+// Fonts
+body{
+  background: $color-nav-main-background;
+  font-family: $font-family-base;
+}
+
+
+
+// Generic
+.section {
+  padding: 2rem 0;
+}
+
+
+nav {
+
+  a {
+    font-size: 0.7rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: $color-text;
+    padding: 0 0.5rem;
+    position: relative;
+    z-index: 1;
+    letter-spacing: 0.1rem;
+
+    &.active:after{
+      border: none;
+    }
+
+    &:after {
+        border-top: 1px solid $color-primary;
+        content:"";
+        margin: 0 auto; /* this centers the line to the full width specified */
+        position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
+        top: 50%; left: 0; right: 0; bottom: 0;
+        width: 95%;
+        z-index: 2;
+    }
+
+    &:hover{
+      text-decoration: none;
+      color: $color-text;
+    }
+  }
+
+  li {
+    list-style-type: none;
+    padding: 0.4rem 0rem;
+  }
+}
+
+.nav-section {
+  @extend .section;
+}
+
+.nav-container {
+  @extend .container;
+}
+
+.nav-wrapper {
+  @extend .row;
+}
+
+.logo {
+  margin: 1rem 0 3rem;
+  @extend .col-lg-3;
+}
+
+.nav-main {
+  @extend .col-lg-7;
+
+  li {
+
+    @include media-breakpoint-up(lg) {
+      display: inline;
+    }
+
+    a {
+      @include media-breakpoint-up(lg) {
+        padding: 1em 0.5rem;
+      }
+    }
+  }
+}
+
+.nav-lang {
+  @extend .col-lg-2;
+  font-weight: 400;
+  @include media-breakpoint-up(lg) {
+    transform: rotate(-90deg);
+  }
+
+  a {
+    color: #a8a8a8;
+  }
+}
+
+
+
+// --------------------------------
+// Splash
+// --------------------------------
+
+.splash-section {
+  @extend .section;
+  background: $color-secondary;
+}
+
+.splash-container {
+  @extend .container;
+}
+
+.splash {
+  @extend .row;
+
+  .video-loop {
+    @extend .col-lg-6;
+  }
+
+  .catch-phrase {
+    @extend .col-lg-6;
+  }
+
+}
+
+// --------------------------------
+// Sections
+// --------------------------------
+
+.sections-section {
+  @extend .section;
+
+  .title-row {
+    @extend .row;
+  }
+
+  .title-content {
+    @extend .col-lg-12;
+  }
+
+  .carousel-item {
+    display: none;
+  }
+
+  .show {
+    display: block;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  nav {
+
+    ul {
+      -webkit-padding-start: 0;
+      margin-left: -0.5rem;
+    }
+
+    li {
+      display: inline;
+    }
+  }
+
+}
+
+.sections-container {
+  @extend .container;
+}
+
+
+// --------------------------------
+// Blog
+// --------------------------------
+
+.blog-section {
+  @extend .section;
+  background: $color-light-grey;
+}
+
+.blog-container {
+  @extend .container;
+}
+
+.blog-content {
+  @extend .row;
+}
+
+.article-list {
+  @extend .col-lg-4;
+}
+
+
+// --------------------------------
+// Footer
+// --------------------------------
+
+.footer-section {
+  @extend .section;
+  background: $color-dark-grey;
+}
+
+.footer-container {
+  @extend .container;
+}
+
+.footer-content {
+  @extend .row;
+}
+
